JDK-8148481: Devirtualize Klass::vtable breaks Zero build

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • Environment:

      Zero

    • b107
    • generic
    • linux

      In file included from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/oops/arrayKlass.hpp:29:0,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/oops/typeArrayKlass.hpp:29,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/oops/typeArrayOop.hpp:29,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/oops/constantPool.hpp:32,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/oops/method.hpp:33,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/runtime/frame.hpp:28,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/code/codeBlob.hpp:30,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/code/nmethod.hpp:28,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/runtime/safepoint.hpp:29,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/gc/shared/collectedHeap.hpp:33,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/interpreter/bytecodeInterpreter.cpp:27:
      /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/oops/klass.hpp: In static member function ‘static void BytecodeInterpreter::run(interpreterState)’:
      /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/oops/klass.hpp:447:16: error: ‘vtableEntry* Klass::start_of_vtable() const’ is protected
      /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/interpreter/bytecodeInterpreter.cpp:2506:59: error: within this context
      /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/interpreter/bytecodeInterpreter.cpp:2506:82: error: invalid cast from type ‘vtableEntry’ to type ‘Method*’
      In file included from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/oops/arrayKlass.hpp:29:0,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/oops/typeArrayKlass.hpp:29,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/oops/typeArrayOop.hpp:29,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/oops/constantPool.hpp:32,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/oops/method.hpp:33,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/runtime/frame.hpp:28,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/code/codeBlob.hpp:30,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/code/nmethod.hpp:28,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/runtime/safepoint.hpp:29,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/gc/shared/collectedHeap.hpp:33,
                       from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/interpreter/bytecodeInterpreter.cpp:27:
      /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/oops/klass.hpp:447:16: error: ‘vtableEntry* Klass::start_of_vtable() const’ is protected
      /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/interpreter/bytecodeInterpreter.cpp:2614:61: error: within this context
      /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero/workspace/openjdk9/hs-rt/hotspot/src/share/vm/interpreter/bytecodeInterpreter.cpp:2614:84: error: invalid cast from type ‘vtableEntry’ to type ‘Method*’
      make[8]: *** [bytecodeInterpreter.o] Error 1
      make[8]: *** Waiting for unfinished jobs....

      See http://builder.classpath.org/jenkins/job/OpenJDK9_hs_rt_Zero/208/console

            Assignee:
            Severin Gehwolf
            Reporter:
            Severin Gehwolf
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: