8148945: JDK-8148481: Devirtualize Klass::vtable breaks Zero build

Use Klass::method_at_vtable() instead of InstanceClass::start_of_vtable()[index]

Reviewed-by: mgerdin, coleenp